Fixed spacing

--- a/CSS/pizza.css
+++ b/CSS/pizza.css
@@ -12,7 +12,7 @@ body {
     background-color: transparent;
 }
 
-.do {
+.do_drop {
     color: white;
     background-color: green;
 }
